--- a/conf/application.conf
+++ b/conf/application.conf
@@ -85,7 +85,7 @@ date.format=yyyy-MM-dd
 # db=mem
 #
 # To connect to a local MySQL5 database, use:
- db=mysql://ubuntu:cashlets@localhost/cashlets
+ db=mysql://root:password@localhost/cashlets
 #
 # To connect to a local PostgreSQL9 database, use:
 # db=postgres://user:pwd@host/database
